# testc

./: .gitignore  CMakeLists.txt  bj.cpp  dist.cpp  hw.cpp  linkedlist.cpp  makefile  montecarlo.cpp  multi_thread.cpp  multiplication  multiplication.cpp  opt.cpp  pi.cpp  primes.cpp  readme.txt  ref.cpp  roman.cpp  sender.cpp  static.cpp  syntax.cpp  tasker.cpp
